# internal/httpApp/dto/users.go
@@ -12,8 +12,12 @@ type UserRequestQueryParams struct {
 
 type UserResponse struct {
 	Id           int64       `json:"id"`
-	Phone_number null.String `json:"phone_number"`
-	Email        null.String `json:"email"`
-	Name         string      `json:"name"`
-	Role_name    string      `json:"role_name"`
+	Phone_number null.String `json:"phone_number" swaggertype:"string" example:"+77012345678"`
+	Email        null.String `json:"email" swaggertype:"string" example:"almas@gmail.com"`
+	Name         string      `json:"name" example:"almas"`
+	Role_name    string      `json:"role_name" example:"user"`
+}
+
+type UsersResponse struct {
+	Users []UserResponse `json:"users"`
 }
